--- a/grc339/flexbox-form/flexboxform.css
+++ b/grc339/flexbox-form/flexboxform.css
@@ -29,12 +29,12 @@ section.personal-info ul li input[type="text"],
 section ul li input[type="email"],
 section ul li input[type="tel"],
 section ul li select {
-	flex: 0 0 30em;
+	flex: 4 0 28em;
 	box-sizing: border-box;
 }
 
 section.personal-info ul li label {
-	flex: 0 0 50em;
+	flex: 1 0 15em;
 }
 
 section.order ul, section.method ul {
@@ -71,7 +71,7 @@ section p {
 textarea {
 	box-sizing: border-box;
 	display: flex;
-	width: _____;
+	width: 100%;
 	height: 6em;
 	background: #fcfcfc;
 	border: 1px solid #e8e8e8;
@@ -83,7 +83,7 @@ textarea {
 @media only screen and (min-width: 40em) {
 
   div.container {
-    margin: 10em;
+    margin: auto;
   }
 
 }
