--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -6,6 +6,8 @@ body {
     margin: 1em;
 }
 
+
+
 p {
     font-weight: 400;
     font-style: normal;
@@ -16,7 +18,7 @@ p {
 figcaption{
     font-weight: 400;
     font-style: italic;
-    margin-top: 0.5em;
+    margin: 0.5em 0 0 0;
     color: #323230;
 }
 
@@ -51,13 +53,25 @@ img {
 
 ul {
     list-style-type: none;
-    background-color: #4281A4;
     padding: 1em;
+}
+
+nav ul {
+    background-color: #4281A4;
+}
+
+form ul {
+    border: 1px solid #4281A4;
+    padding: 2em;
+}
+
+form label {
+    color: #54311A;
 }
 
 nav ul li {
     display: inline;
-    padding: 15px;
+    padding: 8px;
     font-family: interstate-condensed, sans-serif;
     font-weight: 700;
     font-style: normal;
@@ -72,6 +86,10 @@ a {
     text-decoration: none;
 }
 
+a:hover{
+    color: #54311a;
+}
+
 footer p {
     margin-top: 2em;
     font-weight: 200; 
@@ -81,6 +99,75 @@ section.tertiary{
     border-bottom: 1px solid #54311A;
     padding: 1.5em 1.5em 1.5em 0;
 }
+
+main.gallery {
+    position: relative; 
+    overflow: hidden;
+    padding-bottom: calc(67% + 5em);
+}
+
+main.gallery figure {
+    margin: 0;
+    width: calc(100%-2em);
+    position: absolute;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+
+nav.gallery {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 0.4em;
+}
+
+nav.gallery img {
+    height: 100%;
+}
+
+input:nth-of-type(1):checked ~ main figure:nth-of-type(1),
+input:nth-of-type(2):checked ~ main figure:nth-of-type(2),
+input:nth-of-type(3):checked ~ main figure:nth-of-type(3),
+input:nth-of-type(4):checked ~ main figure:nth-of-type(4),
+input:nth-of-type(5):checked ~ main figure:nth-of-type(5),
+input:nth-of-type(6):checked ~ main figure:nth-of-type(6),
+input:nth-of-type(7):checked ~ main figure:nth-of-type(7),
+input:nth-of-type(8):checked ~ main figure:nth-of-type(8){
+    opacity: 1;
+}
+
+
+input.gallery {
+    display: none;
+}
+
+section.personalinfo ul li {
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 1em;
+}
+
+section.personalinfo ul li label {
+	flex: 0 0 8em;
+}
+
+section.personalinfo ul li input[type="text"],
+section ul li input[type="email"],
+section ul li input[type="tel"],
+section ul li select {
+	flex: 2 0 28em;
+	box-sizing: border-box;
+}
+
+section.interests ul {
+	display: flex;
+	flex-wrap: wrap;
+	}
+
+section.interests ul li {
+	flex: 0 0 15em;
+	}
+
 
 @media screen and (min-width: 60em){
     div.container {
@@ -92,6 +179,7 @@ section.tertiary{
     header {
         grid-column: 1/3; 
     }
+      
     
     main {
         grid-column: 1/2;
@@ -99,7 +187,14 @@ section.tertiary{
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 0 1em;
     }
-
+    
+    nav.gallery {
+        grid-column: 1/2;
+    }
+    
+    form {
+        grid-column: 1/2; 
+    }
     
     article {
         grid-column: 1/2;
@@ -121,7 +216,6 @@ section.tertiary{
         display: flex;
         flex-direction: column;
     }
-
     
     section.main figure div {
         flex: 1 0 18em;
@@ -141,6 +235,11 @@ section.tertiary{
         margin: 0; 
     }
     
+    
+    h2 {
+        grid-column: 1/2; 
+    }
+
     footer {
         grid-column: 1/4;
     }
